# dbt-unit-test-101

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
models/staging/: _src.yml  _stg.yml  stg_convert_thai_baht_to_us_dollars.sql  stg_customers_raw.sql  stg_payments_raw.sql
tests/unit/staging/stg_convert_thai_baht_to_us_dollars_unit_test/: test_when_order_id_was_matched_it_should_return_dollars_amount_which_are_us_dollar_currency.sql  test_when_order_id_was_not_matched_it_should_return_no_rows.sql  test_when_order_id_was_not_matched_it_should_return_no_rows_pipe_format.sql
