[tool.poetry]
name = "dbt-unit-test-101"
version = "0.1.0"
description = ""
authors = ["Firstnapat <firstnapat@odds.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.7.10"
dbt-bigquery = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
